--- a/src/index.css
+++ b/src/index.css
@@ -7,20 +7,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 ul { list-style: none; padding: 0; margin: 0; }
 
+.header {
+  height: 80px;
+}
+
 .wishes {
-  margin: 2.5vw;
+  margin: 0 2.5vw;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   grid-auto-flow: row dense;
   grid-gap: 2.5vw;
-  padding-bottom: 50px;
 }
 .wish {
   position: relative;
